fixed image scroll on mobile

--- a/style.css
+++ b/style.css
@@ -39,10 +39,17 @@
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
+  background-repeat: no-repeat;
 }
 
 @media only screen and (max-width: 768px) {
   .scrollable-image-container {
+    display: none;
+  }
+  .scrollable-image-container-one {
+    display: none;
+  }
+  .scrollable-image-container-two {
     display: none;
   }
 }
